--- a/OAuth.Web/OAuth.Web.csproj
+++ b/OAuth.Web/OAuth.Web.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Controllers\PermissionController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
+    <Compile Include="Controllers\SubjectController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Filters\HeaderFooterFilter.cs" />
     <Compile Include="Filters\LoginActionFilter.cs" />
@@ -1340,6 +1341,7 @@
     <None Include="Properties\PublishProfiles\oauth.pubxml" />
     <Content Include="Views\Project\ProjectDropdownMenu.cshtml" />
     <Content Include="Views\Home\TestSqlQuery.cshtml" />
+    <Content Include="Views\Subject\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
