--- a/OAuth.Web/OAuth.Web.csproj
+++ b/OAuth.Web/OAuth.Web.csproj
@@ -1237,6 +1237,7 @@
     <Content Include="assets\js\ie-emulation-modes-warning.js" />
     <Content Include="assets\js\ie10-viewport-bug-workaround.js" />
     <Content Include="assets\js\init-chart.js" />
+    <Content Include="assets\js\item.js" />
     <Content Include="assets\js\jquery-1.10.2.js" />
     <Content Include="assets\js\jquery-1.10.2.min.js" />
     <Content Include="assets\js\jquery.autogrow-textarea.js" />
