1、添加供应商列表，2、修改竞价单发布，3、调整列表横向滚动条兼容性。

--- a/OAuth.Data/OAuth.Data.csproj
+++ b/OAuth.Data/OAuth.Data.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Mapping\ItemMap.cs" />
     <Compile Include="Mapping\ModuleMap.cs" />
     <Compile Include="Mapping\ModulePermissionMap.cs" />
+    <Compile Include="Mapping\SuppliersMap.cs" />
     <Compile Include="Mapping\PermissionMap.cs" />
     <Compile Include="Mapping\ProjectMap.cs" />
     <Compile Include="Mapping\RoleMap.cs" />
@@ -68,9 +69,6 @@
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
