--- a/OAuth.Web/OAuth.Web.csproj
+++ b/OAuth.Web/OAuth.Web.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\SubjectController.cs" />
+    <Compile Include="Controllers\SupplierController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Filters\HeaderFooterFilter.cs" />
     <Compile Include="Filters\LoginActionFilter.cs" />
@@ -1355,6 +1356,8 @@
     <Content Include="Views\Subject\Step2_3.cshtml" />
     <Content Include="Views\Subject\Step2_4.cshtml" />
     <Content Include="Views\Subject\Step2_5.cshtml" />
+    <Content Include="Views\Supplier\Index.cshtml" />
+    <Content Include="Views\Supplier\Add.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -1646,7 +1649,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>59729</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
