--- a/OAuth.Data/OAuth.Data.csproj
+++ b/OAuth.Data/OAuth.Data.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DataModule.cs" />
     <Compile Include="BaseRepository.cs" />
     <Compile Include="Mapping\ItemMap.cs" />
+    <Compile Include="Mapping\ModeMap.cs" />
     <Compile Include="Mapping\ModuleMap.cs" />
     <Compile Include="Mapping\ModulePermissionMap.cs" />
     <Compile Include="Mapping\SuppliersMap.cs" />
