--- a/OAuth.Domain/OAuth.Domain.csproj
+++ b/OAuth.Domain/OAuth.Domain.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IRepository\IUserRepository.cs" />
     <Compile Include="Model\AggregateRoot.cs" />
     <Compile Include="Model\Item.cs" />
+    <Compile Include="Model\Mode.cs" />
     <Compile Include="Model\Module.cs" />
     <Compile Include="Model\ModulePermission.cs" />
     <Compile Include="Model\Supplier.cs" />
